<resources>
    <string name="app_name">ChitChat</string>

    <string name="fragment_login_email">Email</string>
    <string name="fragment_login_username">Username</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_register_firstname">First name</string>
    <string name="fragment_register_lastname">Last name</string>
    <string name="fragment_register_repassword">Retype Password</string>
    <string name="fragment_register_email">Email</string>
    <string name="fragment_addContact_firstemail">Your friends E-mail Address</string>
    <string name="fragment_register_back_button">back</string>
    <string name="fragment_register_register_button">register</string>

    <string name="fragment_addContact_secondemail">Second Email Address</string>
    <string name="fragment_register_email_verification">Reenter email</string>

    <string name="fragment_login_register_button">register</string>
    <string name="fragment_login_login_button">login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_home_title">Home</string>
    <string name="fragment_home_update">You Have 0 New Messages And 0 Invites.</string>
    <string name="fragment_home_reset">Reset Password</string>
    <string name="fragment_add_contact">Add Contact</string>
    <string name="fragment_login_recover"><u>Recover Password</u></string>
    <string name="fragment_reset_update">Update Password</string>
    <string name="fragment_contact_update">Send a friend request</string>
    <string name="fragment_home_weather_card_title">Weather</string>
    <string name="fragment_home_connect">Connect</string>
    <string name="fragment_home_logout">Logout</string>
    <string name="fragment_home_chats">Chats</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fragment_connect_contact">Add Friend</string>
    <string name="fragment_connect_group">Add Group</string>
    <string name="fragment_verify_message">Please check your email to verify your account.</string>
    <string name="fragment_show_contactlist">CONTACT LIST</string>
    <string name="fragment_show_send_requestlist">Pending Request List</string>
    <string name="fragment_show_receive_requestlist">Receiving Request List</string>
    <string name="userId_key">useridkey</string>
    <string name="userName_key">usernamekey</string>
    <string name="userDescription_key">userdescriptionkey</string>
    <string name="accept_request_button">accept</string>
    <string name="request_cancel_button">cancel</string>
    <string name="delete_request_button">decline</string>
    <string name="delete_contact_button">delete</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="fragment_weather_current">Current Weather</string>
    <string name="fragment_weather_temperature">Temperature</string>
    <string name="fragment_weather_humidity">Humidity</string>
    <string name="fragment_weather_description">Description</string>
    <string name="fragment_weather_24hr">48hr broadcast</string>
    <string name="fragment_weather_7days">7 days broadcast</string>
    <string name="fragment_weather_location">LOCATION</string>
</resources>
