<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_addcontact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ResetFragment">

    <TextView
        android:id="@+id/textView_addContact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_add_contact"
        android:textColor="@android:color/white"
        android:textSize="@android:dimen/app_icon_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editText_first_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_first_email_address"
        style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/fragment_addContact_firstemail"
        android:inputType="text"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:shadowRadius="@android:integer/config_longAnimTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editText_second_email_address"
        style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:hint="@string/fragment_addContact_secondemail"
        android:inputType="text"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:shadowRadius="@android:integer/config_longAnimTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_first_email_address" />

    <Button
        android:id="@+id/button_AddContact"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:animateLayoutChanges="true"
        android:background="@android:color/background_light"
        android:text="@string/fragment_contact_update"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_second_email_address" />
</android.support.constraint.ConstraintLayout>