<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_homefragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:tabBackground="@color/colorAccent"
                    app:tabGravity="fill"
                    app:tabIndicatorColor="@android:color/white"
                    app:tabIndicatorGravity="bottom"
                    app:tabMode="fixed"
                    app:tabTextColor="@android:color/white">

                    <android.support.design.widget.TabItem
                        android:id="@+id/TabItem_home_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_home_title" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/TabItem_home_chats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_home_chats" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/TabItem_home_connect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_home_connect" />

                    <android.support.design.widget.TabItem
                        android:id="@+id/TabItem_home_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_home_weather_card_title" />

                </android.support.design.widget.TabLayout>
            </android.support.design.widget.AppBarLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/activity_home"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar"
                tools:context=".HomeActivity" />

        </android.support.constraint.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView_home_chatNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="50dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_alert" />

        <ImageView
            android:id="@+id/imageView_home_connectNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="195dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_alert" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton_newChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:tint="@android:color/white"
            app:backgroundTint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_newchat" />
    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>